overflow fixed

--- a/intro-section-with-dropdown-navigation-main/style.css
+++ b/intro-section-with-dropdown-navigation-main/style.css
@@ -93,6 +93,7 @@ body {
 .container {
     padding: 1rem 2rem;
     padding-bottom: 5rem;
+    overflow: hidden;
 }
 
 .header {
